# sandbox-rust-slack-api

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ghcr.yml  pull_request_main.yml  release.yml
src/: main.rs
