[package]
name = "sandbox-rust-slack-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
async-tls = "0.11.0"
async-tungstenite = "0.17.2"
futures-util = { version = "0.3.21", features = ["sink"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
surf = "2.3.2"
tungstenite = "0.17.3"
url = { version = "2.2.2", features = ["serde"] }
